# define-true-false

./: lang.bnf
Srangospodna/: CMakeLists.txt  build.bat  clean.bat  i686.tch  test.txt
Srangospodna/include/: Constants.h  Error.h  Lexer.h  Node.h  Parser.h  Seman.h  Tag.h  Token.h
Srangospodna/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
Srangospodna/nbproject/private/: configurations.xml
Srangospodna/src/: Constants.cpp  Lexer.cpp  Node.cpp  Parser.cpp  Seman.cpp  Tag.cpp  Token.cpp  Token.h  main.cpp  test.cpp  test_lexer.cpp  test_parser.cpp
